--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -19,8 +19,8 @@
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
 }
 
-.button.inactive {
+/* .button.inactive {
   background-color: rgb(222, 67, 67);
-}
+} */
 
 
